kubernetes_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group-manager
  namespace: moreillon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: group-manager
  template:
    metadata:
      labels:
        app: group-manager
    spec:
      containers:
        - name: group-manager
          image: ${CONTAINER_IMAGE_TAGGED}
          livenessProbe:
            httpGet:
              path: /health/live
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 30
            failureThreshold: 3
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 2

---
apiVersion: v1
kind: Service
metadata:
  name: group-manager
  namespace: moreillon
spec:
  ports:
    - port: 80
      nodePort: 31999
  selector:
    app: group-manager
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: group-manager
spec:
  ingressClassName: jtektrnd-net
  rules:
    - host: groups-api.jtektrnd.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: group-manager
                port:
                  number: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: group-manager
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - groups-api.jtektrnd.net
  rules:
    - backendRefs:
        - name: group-manager
          port: 80
